# HighestInTheWorld

./: .gitignore  README.md  gamescreen.cpp  main.cpp  storyscreen.cpp  titlescreen.cpp
assets/game/: GAME.air  GAME.sff  GAME.snd  INTRO.air  INTRO.def  INTRO.sff  LEVEL0.sff  LEVEL0.txt  LEVEL1.txt  LEVEL2.sff  LEVEL2.txt  LEVEL3.sff  LEVEL3.txt  LEVEL4.sff  LEVEL4.txt  LEVEL5.sff  LEVEL5.txt  LEVELS.air  OUTRO.def  OUTRO.sff  TITLE.sff  TITLE.snd
assets/game/dreamcast/: OUTRO.snd
boot/: ip.txt
cmake/: CMakeLists.txt
vita/: CmakeLists.txt
windows/: LD59.sln  LD59.vcxproj  LD59.vcxproj.filters  LD59All.sln  LD59Dreamcast.sln  LD59Dreamcast.vcxproj  LD59Vita.sln  LD59Vita.vcxproj  LD59Web.sln  LD59Web.vcxproj  resource.h
